# talktalia

./: .gitignore  BarWidget.qml  README.md  Settings.qml  flake.nix  registry.json
daemon/src/dictation_daemon/: main.py
talktalia/: Main.qml  README.md  manifest.json
talktalia/daemon/: pyproject.toml
talktalia/daemon/src/dictation_daemon/: engine.py
