[project]
name = "dictation-daemon"
version = "0.1.0"
description = "RealtimeSTT-based dictation daemon with JSONL stdio protocol"
requires-python = ">=3.11,<3.12"
dependencies = [
    "RealtimeSTT",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dictation_daemon"]
